# hierarchical_haitian_news_crew

./: README.md
.devcontainer/: devcontainer.json
hierarchical_haitian_news_crew/: .gitignore  README.md  pyproject.toml  report.md
hierarchical_haitian_news_crew/src/hierarchical_haitian_news_crew/: crew.py  main.py
hierarchical_haitian_news_crew/src/hierarchical_haitian_news_crew/config/: tasks.yaml
hierarchical_news_crew/: README.md  pyproject.toml  report.md
hierarchical_news_crew/src/hierarchical_news_crew/: crew.py  main.py
hierarchical_news_crew/src/hierarchical_news_crew/config/: agents.yaml  tasks.yaml
