[tool.poetry]
name = "hierarchical_news_crew"
version = "0.1.0"
description = "hierarchical_news_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }
agentops = "^0.3.13"


[tool.poetry.scripts]
hierarchical_news_crew = "hierarchical_news_crew.main:run"
run_crew = "hierarchical_news_crew.main:run"
train = "hierarchical_news_crew.main:train"
replay = "hierarchical_news_crew.main:replay"
test = "hierarchical_news_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
